--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.ttslua linguist-language=lua
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
